fixed contrast error on navbar

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -20,7 +20,7 @@ nav {
   background-color: #ffdcb5;
   padding: 1em;
   text-transform: uppercase;
-  color: #fff6f6;
+  color: #000000;
   z-index: 100;
   border-bottom: #000000 2px solid;
 }
@@ -41,7 +41,7 @@ nav a {
   color: #000000;
 }
 nav a:hover {
-  color:#3b3b3b;
+  color: #3b3b3b;
   text-decoration: underline;
 }
 
